--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-# Original Python environment (2023-10-08):
-# Python 3.11.4 (main, Jun  9 2023, 07:59:55) [GCC 12.3.0] on linux
+# Original Python environment (2023-11-12):
+# Python 3.10.12 (main, Jun 11 2023, 05:26:28) [GCC 11.4.0]
 
 # Primary
-pyexiv2=2.8.2
-pyside6=6.5.3
+pyexiv2
 
 # Secondary
-ipython==8.16.1
+ipython
